<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
     >
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
       	android:layout_weight="30"
        android:text="@string/deviceList"
        android:textSize="30sp"
		android:gravity="center"         
		/>
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
       	android:layout_weight="10"
        android:text="@string/deviceList1"
        android:textSize="15sp"
        android:gravity="center"         
		 />
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
       	android:layout_weight="10"
        android:text="@string/deviceList2"
        android:textSize="15sp"
        android:gravity="center"         
		 />
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
       	android:layout_weight="10"
        android:text="@string/deviceList3"
        android:textSize="15sp"
        android:gravity="center"         
		 />
    
    

    <Button
        android:id="@+id/activate"
		android:textColor="#FFFFFF"
		android:textSize="30sp"
		android:layout_gravity="left"
		android:layout_width="150dp"
		android:layout_height="wrap_content"
		android:background="@drawable/buttonshape"
		android:shadowColor="#A8A8A8"
		android:shadowDx="0"
		android:shadowDy="0"
		android:shadowRadius="5"
		android:layout_weight="10"
		android:text="@string/activate"
		
        />
    
    <TextView  
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:gravity="center"
	    android:text="@string/developer"
	    android:layout_weight="30"
	    
	/>    

</LinearLayout>
