<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" >
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
       	android:layout_weight="30"
        
         />
    
    <EditText
        android:id="@+id/email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_weight="10"    
        android:inputType = "textEmailAddress" />
    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_weight="10"   
        android:inputType ="textPassword" />
    <EditText
        android:id="@+id/password2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password2"
        android:layout_weight="10"
        android:inputType ="textPassword" />
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
       	android:layout_weight="10"
        
         />
    
    <Button
        android:id="@+id/signUpBtn"
        android:textColor="#FFFFFF"
		android:textSize="30sp"
		android:layout_gravity="center"
		android:layout_width="150dp"
		android:layout_height="60dp"
		android:background="@drawable/buttonshape"
		android:shadowColor="#A8A8A8"
		android:shadowDx="0"
		android:shadowDy="0"
		android:shadowRadius="5"
		android:layout_weight="10"
        android:text="@string/signUpBtn" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
       	android:layout_weight="20"
        
         />
</LinearLayout>
