<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
       	android:layout_weight="30"
        
         />
    
    <EditText
        android:id="@+id/emailIn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_weight="10"    
        android:inputType = "textEmailAddress" />
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
       	android:layout_weight="20"
        
         />
    
    <EditText
        android:id="@+id/passwordIn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_weight="10"   
        android:inputType ="textPassword" />
    
    <Button
        android:id="@+id/signInBtn"
        android:textColor="#FFFFFF"
		android:textSize="30sp"
		android:layout_gravity="center"
		android:layout_width="150dp"
		android:layout_height="60dp"
		android:background="@drawable/buttonshape"
		android:shadowColor="#A8A8A8"
		android:shadowDx="0"
		android:shadowDy="0"
		android:shadowRadius="5"
		android:layout_weight="10"
        android:text="@string/signIn" />
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
       	android:layout_weight="30"
        
         />
    
</LinearLayout>
