<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    
    tools:context=".MainActivity" >

    <ImageView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:adjustViewBounds="true"
	    android:src="@drawable/logo_b_bck"
	    android:layout_weight="30" />
    
    <ImageView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:adjustViewBounds="true"
	    android:src="@drawable/diagram3"
	    android:layout_weight="40" />
    
    <TextView  
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:gravity="center"
	    android:text="@string/intro"
	    android:layout_weight="10"
	    
	/>
    
    <Button
        android:id="@+id/newcome"
        android:text="@string/newcome"
		android:textColor="#FFFFFF"
		android:textSize="30sp"
		android:layout_gravity="center"
		android:layout_width="150dp"
		android:layout_height="wrap_content"
		android:background="@drawable/buttonshape"
		android:shadowColor="#A8A8A8"
		android:shadowDx="0"
		android:shadowDy="0"
		android:shadowRadius="5"
		android:onClick="changeToSignUP"
		android:layout_weight="10"
        />

	<TextView  
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:gravity="center"
	    android:text="@string/developer"
	    android:layout_weight="10"
	    
	/>    
    
</LinearLayout>
